--- a/client/src/components/Calendar/style.css
+++ b/client/src/components/Calendar/style.css
@@ -8,7 +8,7 @@ html {
 html, body {
   width: 100%;
   margin: 0;
-  display: flex;
+  /* display: flex; */
   justify-content: center;
   align-items: center;
   font-family: 'Montserrat', 'Arial', sans-serif;
