--- a/client/src/components/Calendar/style.css
+++ b/client/src/components/Calendar/style.css
@@ -13,7 +13,7 @@ html, body {
   align-items: center;
   font-family: 'Montserrat', 'Arial', sans-serif;
   font-size: 1rem;
-  text-align: center;
+  /* text-align: center; */
   background-color: #fff;
   color: #111; }
 
