--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -1,8 +1,13 @@
 #navbar{
     padding: 25px;
     background-color: rgb(4, 4, 4) !important;
-   
+   margin-bottom:0px;
+   border-radius: 0px;
     
+}
+.navbar-brand{
+    padding:0px;
+    text-align: center;
 }
 
 .nav-link{
