--- a/client/src/components/Calendar/style.css
+++ b/client/src/components/Calendar/style.css
@@ -36,7 +36,7 @@ a {
   text-align: center 
 }
 
-.background-jumbotron{
+/* .background-jumbotron1{
   background: linear-gradient(
     to right, 
     #f9f9f7 0%, 
@@ -48,7 +48,69 @@ a {
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
+  margin-bottom:0px;
 }
+.background-jumbotron2{
+  background: linear-gradient(
+    to right, 
+    #e7e7ef 0%, 
+    #e7e7ef   50%, 
+    #f9f9f7 50%, 
+    #f9f9f7  100%
+  );  
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  margin-bottom:0px;
+} */
+
+.calendar-img{
+  width:100%;
+  height:250px;
+  opacity: 0.5;
+  max-width: 100%;
+}
+
+.calendar-img1{
+  width:100%;
+  height:250px;
+  max-width: 100%;
+  opacity: 0.4;
+
+}
+#modal-btn{
+  height: 30px;
+  width: 20%;
+  border-radius:0px;
+}
+
+#modal-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.event-btn-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.event-btn{
+  height: 30px;
+  width: 20%;
+  border-radius:0px;
+  
+}
+
+
+.info-border{
+  border: .1px solid black
+}
+
+
 
 #quotes{
   text-align: center
@@ -79,7 +141,17 @@ button {
     display: block;
   margin-left: auto;
   margin-right: auto;
-  text-align: center 
+  text-align: center;
+  
+  }
+
+  #calendar-select{
+    border: 0.1rem solid rgb(62, 113, 145);
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  border-radius: 0px;
   }
 
 input {
