--- a/client/src/components/Landing/style.css
+++ b/client/src/components/Landing/style.css
@@ -1,4 +1,30 @@
 .slides{
-   width:60%;
-   height: 300px
+   width:100%;
+   height: 350px
 }
+/* .carousel-caption {
+   background-position: center center;
+}
+
+.carousel-caption h1 {
+   margin: 0;
+  color: white;
+} */
+
+.carousel-caption {
+   z-index:10;
+   color:#fff;
+   text-align:center;
+   bottom:auto;
+   -webkit-transform:translate(0, -50%);
+   -ms-transform:translate(0, -50%);
+   transform:translate(0, -50%);
+   }
+
+   #background-jumbotron3{
+      background-color: white;
+    }
+
+    .landing-title{
+       text-align: center;
+    }
