--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -1,8 +1,9 @@
 #navbar{
-    padding: 25px;
+    padding-bottom:25px;
     background-color: rgb(4, 4, 4) !important;
    margin-bottom:0px;
    border-radius: 0px;
+   padding-top: 10px;
     
 }
 .navbar-brand{
@@ -17,7 +18,7 @@
 }
 
 #logo{
-    width: 60%;
+    width: 40%;
     padding: 0px;
     margin: 0px;
 }
