--- a/client/src/components/Calendar/style.css
+++ b/client/src/components/Calendar/style.css
@@ -123,8 +123,11 @@
   
   
   #border{
-   border: .1px solid black;
+   border: 1px solid black;
    width: 230px;
+   text-align: center ;
+   margin-left:auto;
+   margin-right:auto;
   }
 
   .calendar-modal{
