--- a/client/src/components/Landing/style.css
+++ b/client/src/components/Landing/style.css
@@ -1,6 +1,21 @@
 .slides{
    width:100%;
-   height: 350px
+   height: 350px;
+   
+}
+#details{
+   /* margin-right: 30px; */
+   margin-top: 0px;
+   margin-bottom: 0px;
+   background-color: rgba(62, 113, 145, 0.351);
+   padding:30px;
+}
+
+.steps{
+   font-size: 2.5em;
+   font-weight: bold;
+   /* margin-right:200px; */
+   
 }
 /* .carousel-caption {
    background-position: center center;
@@ -14,7 +29,7 @@
 .carousel-caption {
    z-index:10;
    color:#fff;
-   text-align:center;
+   /* text-align:center; */
    bottom:auto;
    -webkit-transform:translate(0, -50%);
    -ms-transform:translate(0, -50%);
@@ -27,4 +42,73 @@
 
     .landing-title{
        text-align: center;
+       text-decoration: underline
+    }
+
+    .landing-p{
+       margin-left:110px;
+    }
+
+    .landing-border{
+       border: 1px solid black;
+       border-radius: 10px;
+
+       
+    }
+    @media only screen and (max-width: 100rem) {
+      .landing-p{
+         margin-left:0px;
+         text-align:center
+      }
+
+    }
+    @media only screen and (max-width: 68rem) {
+      .landing-p{
+         margin-left:0px;
+         text-align:center
+      }
+
+      .carousel-caption {
+         z-index:10;
+         color:#fff;
+         /* text-align:center; */
+         bottom:0px;
+         padding-bottom: 0px;
+         top:40%;
+         -webkit-transform:translate(0, -50%);
+         -ms-transform:translate(0, -50%); 
+          transform:translate(0, -50%);
+         }
+
+
+    }
+  
+    @media only screen and (max-width: 32rem) {
+      #details{
+         margin-right: 0px;
+         
+      }
+
+      .carousel-caption {
+         z-index:10;
+         color:#fff;
+         /* text-align:center; */
+         bottom:0px;
+         padding-bottom: 0px;
+         top:40%;
+         -webkit-transform:translate(0, -50%);
+         -ms-transform:translate(0, -50%); 
+          transform:translate(0, -50%);
+         }
+
+         .landing-p{
+            margin-left:0px;
+            text-align:center
+         }
+
+         #logo{
+            margin:0px;
+            text-align: center;
+            margin-top:10px;
+         }
     }
