--- a/client/src/components/Calendar/style.css
+++ b/client/src/components/Calendar/style.css
@@ -95,6 +95,7 @@
   .event-title{
       margin-top: 50px;
       padding-bottom: 10px;
+      margin-right:40px
   }
   
   .info-border{
@@ -292,7 +293,22 @@
   
   .event-add {
     margin: 2rem 0 4rem 0; }
-  
+    @media only screen and (max-width: 100rem) {
+      #modal-btn{
+        width:auto
+      }
+      .event-btn{
+        width:auto
+      }
+    }
+    @media only screen and (max-width: 68rem) {
+      #modal-btn{
+        width:auto
+      }
+      .event-btn{
+        width:auto
+      }
+    }
   @media only screen and (max-width: 32rem) {
     #app {
       width: 95%; }
