--- a/client/src/components/Resource/style.css
+++ b/client/src/components/Resource/style.css
@@ -1,15 +1,67 @@
 .resourceBtn{
     width: 100%;
-    padding-bottom:30px !important;
-    font-size: 1.3em;
+    padding-bottom:60px !important;
+    font-size: 3em !important;
     letter-spacing: 2px;
     margin-bottom: 20px !important;
     background-color: rgba(6, 88, 118, 0.66) !important;
     text-align: center;
 
 }
+.video{
+    
+    justify-content: center;
+    margin-left: 50px;
+   
+  flex-direction: column;
+  align-items: center;
+}
 
 #youtube{
-    display: inline;
-    margin-left: 20px;
+    display: inline-block;
+    margin:10px;
+
 }
+
+
+@media only screen and (max-width: 110rem) {
+    #youtube{
+        display: inline-block; 
+    } 
+    .video{
+        /* margin: 20px; */
+        margin-left:80px;
+      align-items: center;
+    }
+}
+@media only screen and (max-width: 80rem) {
+    #youtube{
+        display: inline-block; 
+    } 
+    .video{
+        /* margin: 20px; */
+        margin-left:35px;
+      align-items: center;
+    }
+}
+@media only screen and (max-width: 68rem) {
+    #youtube{
+        display: inline-block; 
+    } 
+    .video{
+        /* margin: 20px; */
+        margin-left:60px;
+      align-items: center;
+    }
+}
+@media only screen and (max-width: 32rem) {
+    #youtube{
+        display: inline-block; 
+    } 
+    .video{
+        /* margin: 20px; */
+        margin-left:40px;
+      align-items: center;
+    }
+}
+
