Make resource buttons responsive

--- a/client/src/components/Resource/style.css
+++ b/client/src/components/Resource/style.css
@@ -1,43 +1,47 @@
 .resourceBtn{
-    width:100%;
-    padding-bottom:40px !important;
-    font-size: 2em !important;
-    letter-spacing: 2px;
-    margin-bottom: 20px !important;
-    background-color: rgba(6, 88, 118, 0.66) !important;
-    text-align: center;
+  width:100%;
+  padding-bottom:40px !important;
+  font-size: 2em !important;
+  letter-spacing: 2px;
+  margin-bottom: 20px !important;
+  background-color: rgba(6, 88, 118, 0.66) !important;
+  text-align: center;
 }
 #aaBtn{
-  padding-bottom:5px !important;
+padding-bottom:5px !important;
+background-color: rgba(6, 88, 118, 0.66) !important;
+text-align: center;
+width:100%;
+font-size: 2em !important;
+margin-bottom: 20px !important;
 }
-/* .video{
-    
-    justify-content: center;
-    margin-left: 60px;
-   
-  flex-direction: column;
-  align-items: center;
-} */
 
 #youtube{
-    display: inline-block;
-    margin:10px;
+  display: inline-block;
+  margin:10px;
 
 }
 
 @media only screen and (max-width: 68rem) {
-  
-    .video{
-        
-        margin-left:70px !important;
-      align-items: center !important;
-    }
+
+  .video{
+      
+      margin-left:70px !important;
+    align-items: center !important;
+  }
+  #aaBtn{
+    font-size: 1.2em !important;
+  }
+  .resourceBtn{
+    font-size: 1.2em !important;
+    padding-bottom:  30px !important;
+  }
 }
 @media only screen and (max-width: 32rem) {
-   
-    .video{
-        margin-left:auto !important;
-      align-items: center !important;
-    }
+ 
+  .video{
+      margin-left:auto !important;
+    align-items: center !important;
+  }
 }
 
